--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no">
     <title>ZUSU</title>
+
+    <link rel="preload" href="/assets/myfont.woff" as="font" type="font/woff" crossorigin>
     
     <!-- Favicon -->
     <link rel="shortcut icon" href="/assets/flappy.ico" />
